--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <section class="anime-container">
     <div class="anime-card">
-        <img src="https://images.app.goo.gl/YuvDmvgCTHwrHJpd8" alt="Poster Anime">
+        <img src="https://i.ibb.co.com/PvYf9054/001706500-1705906267-one-piece-06.webp" alt="Poster Anime">
         <h3>One Piece</h3>
         <p class="genre">Genre: Action,Drama,Fantasy,Shounen,Super Power,Comedy,Adventure</p>
         <a href="#" class="btn">Lihat Detail</a>
